Alpha version of Tema amoroso

--- a/include/footer.html
+++ b/include/footer.html
@@ -1,4 +1,8 @@
-<footer>
+<div class="button-top clearfix">
+					<a href="#">&#8593;<br>Torna in cima</a>
+				</div>
+				</section>
+				<footer>
 					<div class="main-footer clearfix">
 						<small>&copy; 2015 Hintclub S.r.l.s.</small>
 						<div class="legal">All rights reserved</div>
