--- a/include/menu.html
+++ b/include/menu.html
@@ -5,12 +5,49 @@
 					<div class="navmenu">
 						<nav>
 							<ul>
-								<li id="menu-intro"><a href="index">Home</a></li>
-								<li id="menu-faq"><a href="faq">FAQ</a></li>
-								<li>Menu 3</li>
-								<li>Menu 4</li>
-								<li>Menu 5</li>
-								<li>Menu 6</li>
+								<li id="menu-home"><a href="index">Home</a></li>
+									<ul class="submenu">
+										<li id="menu-prefazione"><a href="prefazione">Prefazione</a></li>
+										<li id="menu-intro"><a href="introduzione">Introduzione</a></li>
+									</ul>
+								<li id="menu-storico"><a href="tema_storico">Il tema storico</a></li>
+									<ul class="submenu">
+										<li id="menu-showa"><a href="tema_storico_1">L'epoca Shōwa</a></li>
+										<li id="menu-terremoto"><a href="tema_storico_2">Il terremoto del 1923</a></li>
+										<li id="menu-crisi"><a href="tema_storico_3">La crisi economica del 1927-29</a></li>
+										<li id="menu-gestapo"><a href="tema_storico_4">La Germania nazista e le Gestapo</a></li>
+										<li id="menu-gestapo"><a href="tema_storico_5">Le conseguenze della guerra</a></li>
+									</ul>
+								<li id="menu-politico"><a href="tema_politico">Il tema politico-sociale</a></li>
+									<ul class="submenu">
+										<li id="menu-classepolitica"><a href="tema_politico_1">La critica politica e le facce della crisi</a></li>
+									</ul>
+								<li id="menu-amoroso"><a href="tema_amoroso">Il tema amoroso</a></li>
+									<ul class="submenu">
+										<li id="menu-amoroso1"><a href="tema_amoroso_1">Il primo incontro</a></li>
+										<li id="menu-amoroso2"><a href="tema_amoroso_2">Il ruolo del vento tra Jiro e Nahoko</a></li>
+										<li id="menu-amoroso3"><a href="tema_amoroso_3">Il matrimonio</a></li>
+									</ul>
+								<li id="menu-miyazaki"><a href="miyazaki">Miyazaki nel film</a></li>
+									<ul class="submenu">
+										<li id="menu-ispirazioni"><a href="ispirazioni">Elementi che hanno ispirato il film</a></li>
+										<li id="menu-doppiaggio"><a href="doppiaggio">Hideaki Anno e il doppiaggio</a></li>
+										<li id="menu-sogno"><a href="sogno">Il sogno maledetto di Jiro e Miyazaki</a></li>
+										<li id="menu-caproni"><a href="caproni">Il rapporto con la famiglia Caproni</a></li>
+										<li id="menu-parallelismo"><a href="parallelismi">I parallelismi</a></li>
+										<li id="menu-salvezza"><a href="salvezza">Un'ancora di salvezza per il cuore</a></li>
+									</ul>
+								<li id="menu-critica"><a href="critica">La critica</a></li>
+									<ul class="submenu">
+										<li id="menu-polverone"><a href="polverone">Il polverone politico</a></li>
+										<li id="menu-ritmo"><a href="ritmo">Il ritmo del film</a></li>
+									</ul>
+								<li id="menu-considerazioni"><a href="considerazioni">Considerazioni personali</a></li>
+									<ul class="submenu">
+										<li id="menu-caratterizzazione"><a href="caratterizzazione">La caratterizzazione dei personaggi</a></li>
+										<li id="menu-bambini"><a href="ritmo">I bambini e la domanda "Perché?"</a></li>
+										<li id="menu-arte"><a href="arte">L'arte che fa conoscere sè stessi</a></li>
+									</ul>
 							</ul>
 							<img id="logoghibli" src="../assets/logo_ghibli.png" alt="Studio Ghibli">
 						</nav>
