--- a/include/articles/test.html
+++ b/include/articles/test.html
@@ -1,5 +1,5 @@
 <header class="clearfix" id="bg-intro">
-					<h1>INTRODUZIONE</h1>
+					<h1>SI ALZA IL VENTO</h1>
 				</header>
 				<section>
 					<article>
@@ -19,7 +19,7 @@
 							<li>Dire la mia su alcuni preconcetti con l'aiuto di alcune dichiarazioni del regista stesso.</li>
 						</ol>
 						<div class="media">
-							<a href="../media/img/test.jpg" target="_blank"><img src="../media/img/test_min.jpg" alt="test"></a>
+							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt="test"></a>
 							<p class="didascalia">Didascalia didascalia didascalia didascalia didascalia. Didascalia didascalia didascalia didascalia didascalia. Didascalia didascalia didascalia didascalia didascalia. Didascalia didascalia didascalia didascalia didascalia.</p>
 						</div>
 						<h3>Perchè parlarne proprio ora, a quasi 5 mesi dall'uscita nelle sale italiane?</h3>
@@ -37,4 +37,3 @@
 						</div>
 						<p class="alert">ATTENZIONE: IN QUALITÀ DI ANALISI, IL TESTO CHE SEGUE È FARCITO DI SPOILER COME UN BABBÀ NEL RUM; SE NON AVETE ANCORA VISTO IL FILM NON PROSEGUITE CON LA LETTURA.</p>
 					</article>
-				</section>
