Tema storico e politico

--- a/include/menu.html
+++ b/include/menu.html
@@ -12,15 +12,14 @@
 									</ul>
 								<li id="menu-storico"><a href="tema_storico">Il tema storico</a></li>
 									<ul class="submenu">
-										<li id="menu-showa"><a href="tema_storico_1">L'epoca Shōwa</a></li>
-										<li id="menu-terremoto"><a href="tema_storico_2">Il terremoto del 1923</a></li>
-										<li id="menu-crisi"><a href="tema_storico_3">La crisi economica del 1927-29</a></li>
-										<li id="menu-gestapo"><a href="tema_storico_4">La Germania nazista e le Gestapo</a></li>
-										<li id="menu-gestapo"><a href="tema_storico_5">Le conseguenze della guerra</a></li>
+										<li id="menu-storico1"><a href="tema_storico_1">Il setting storico e il terremoto</a></li>
+										<li id="menu-storico2"><a href="tema_storico_2">La crisi economica</a></li>
+										<li id="menu-storico3"><a href="tema_storico_3">La Germania nazista e la Gestapo</a></li>
+										<li id="menu-storico4"><a href="tema_storico_4">Le conseguenze della guerra</a></li>
 									</ul>
 								<li id="menu-politico"><a href="tema_politico">Il tema politico-sociale</a></li>
 									<ul class="submenu">
-										<li id="menu-classepolitica"><a href="tema_politico_1">La critica politica e le facce della crisi</a></li>
+										<li id="menu-politico1"><a href="tema_politico_1">Le diverse facce della crisi</a></li>
 									</ul>
 								<li id="menu-amoroso"><a href="tema_amoroso">Il tema amoroso</a></li>
 									<ul class="submenu">
