Miyazaki nel film

--- a/include/menu.html
+++ b/include/menu.html
@@ -29,12 +29,12 @@
 									</ul>
 								<li id="menu-miyazaki"><a href="miyazaki">Miyazaki nel film</a></li>
 									<ul class="submenu">
-										<li id="menu-ispirazioni"><a href="ispirazioni">Elementi che hanno ispirato il film</a></li>
-										<li id="menu-doppiaggio"><a href="doppiaggio">Hideaki Anno e il doppiaggio</a></li>
-										<li id="menu-sogno"><a href="sogno">Il sogno maledetto di Jiro e Miyazaki</a></li>
-										<li id="menu-caproni"><a href="caproni">Il rapporto con la famiglia Caproni</a></li>
-										<li id="menu-parallelismo"><a href="parallelismi">I parallelismi</a></li>
-										<li id="menu-salvezza"><a href="salvezza">Un'ancora di salvezza per il cuore</a></li>
+										<li id="menu-miyazaki1"><a href="miyazaki_1">Elementi che hanno ispirato il film</a></li>
+										<li id="menu-miyazaki2"><a href="miyazaki_2">Il doppiaggio e Hideaki Anno</a></li>
+										<li id="menu-miyazaki3"><a href="miyazaki_3">Il sogno maledetto di Jiro e Miyazaki</a></li>
+										<li id="menu-miyazaki4"><a href="miyazaki_4">Il rapporto con la famiglia Caproni</a></li>
+										<li id="menu-miyazaki5"><a href="miyazaki_5">I parallelismi</a></li>
+										<li id="menu-miyazaki6"><a href="miyazaki_6">Un'ancora di salvezza per il cuore</a></li>
 									</ul>
 								<li id="menu-critica"><a href="critica">La critica</a></li>
 									<ul class="submenu">
