--- a/include/menu.html
+++ b/include/menu.html
@@ -38,8 +38,8 @@
 									</ul>
 								<li id="menu-critica"><a href="critica">La critica</a></li>
 									<ul class="submenu">
-										<li id="menu-polverone"><a href="polverone">Il polverone politico</a></li>
-										<li id="menu-ritmo"><a href="ritmo">Il ritmo del film</a></li>
+										<li id="menu-critica1"><a href="critica_1">Il polverone politico</a></li>
+										<li id="menu-critica2"><a href="critica_2">Le "scene inutili"</a></li>
 									</ul>
 								<li id="menu-considerazioni"><a href="considerazioni">Considerazioni personali</a></li>
 									<ul class="submenu">
