Alpha project completion

--- a/include/articles/critica_2.html
+++ b/include/articles/critica_2.html
@@ -14,45 +14,47 @@
 						</div>
 						<p>La critica più diffusa però riguarda sicuramente il ritmo del film, che secondo alcuni sarebbe troppo lento e farcito di nozioni che portano poco ai fini della trama. Posso effettivamente comprendere come la pellicola sembri quasi divisa in due metà, nella prima delle quali abbiamo una predominanza di contesto storico &mdash; in cui però non bisogna dimenticarsi il fatto che il regista ci fa idealmente stringere la mano a Jiro, un personaggio che voleva dipingere come totalmente umano, delineandone il carattere in maniera molto accurata &mdash; mentre nella seconda possiamo seguire le vicende di Nahoko, che ci terrano con il fiato sospeso fino alla fine.</p>
 						<p>Il ritmo della narrazione in generale è stato preso di mira per gli apparenti momenti morti, in cui il regista si sofferma forse troppo a lungo su inquadrature statiche o senza dialoghi, che tendono ad annoiare alcuni spettatori. Vorrei sottolineare tuttavia come questi silenzi profondi nascondano in realtà un dialogo intenso con il comparto sonoro, che si distingue ancora una volta per la sua efficacia: risulta sempre evocativo ed incalzante, forse caratterizzato da un tono un po' più malinconico rispetto ad altre produzioni Ghibli, ma non per questo meno emozionante, anzi.</p>
-						<p>Vorrei spendere due parole anche sull'intero comparto sonoro del film, affidato ancora una volta al compositore storico dello studio Joe Hisaishi e arricchito dal singolo della cantante giapponese Yumi Matsutoya <i>"Hikoukigumo"</i>; una vera e propria perla che va ad impreziosire e ad accompagnare i titoli di coda del film, risultando particolarmente adatta al destino della povera Nahoko:</p>
+						<p>Vorrei spendere due parole anche sull'intero comparto sonoro del film, affidato ancora una volta al compositore storico dello studio Joe Hisaishi e arricchito dal singolo della cantante giapponese Yumi Matsutoya <i>"Hikōki-gumo"</i>; una vera e propria perla che va ad impreziosire e ad accompagnare i titoli di coda del film, risultando particolarmente adatta al destino della povera Nahoko:</p>
 						<div class="colonne clearfix">
 							<div class="lyrics_l">
-								<b>"Hikoukigumo"</b><br><br>
-								shiroi sakamichi ga sora made tsuzuiteita<br>
-								yurayura kagerou ga ano ko wo tsutsumu<br>
-								daremo kizukazu tada hitori<br>
-								ano ko wa nobotte iku<br>
-								nanimo osorenai soshite maiagaru<br>
-								sora ni akogarete sora wo kakete yuku<br>
-								ano ko no inochi wa hikoukigumo<br>
-								takai ano mado de ano ko wa shinu mae mo<br>
-								sora wo mite ita no ima wa wakaranai<br>
-								hoka no hito ni wa wakaranai<br>
-								amari ni mo wakasugita to<br>
-								tada omou dake keredo shiawase<br>
-								sora ni akogarete sora wo kakete yuku<br>
-								ano ko no inochi wa hikoukigumo<br><br>
-								sora ni akogarete sora wo kakete yuku<br>
-								ano ko no inochi wa hikoukigumo
+								<p><b>"Hikōki-gumo"</b></p>
+								<p>Shiroi sakamichi ga sora made tuzuite ita<br>
+								Yurayura kagerou ga ano ko wo tsutsumu<br>
+								Daremo kizukazu tada hitori<br>
+								Ano ko wa nobotte iku<br>
+								Nanimo osorenai soshite maiagaru</p>
+								<p>Sora ni akogarete sora wo kakete iku<br>
+								Ano ko no inochi wa hikouki-gumo</p>
+								<p>Takai ano mado de ano ko wa shinu mae mo<br>
+								Sora wo miteita no.<br>
+								Ima wa wakaranai<br>
+								Hoka no hito niwa wakaranai<br>
+								Amari nimo wakasugita to<br>
+								Tada omou dake. Keredo shiawase</p>
+								<p>Sora ni akogarete sora wo kakete iku<br>
+								Ano ko no inochi wa hikouki-gumo</p>
+								<p>Sora ni akogarete sora wo kakete iku<br>
+								Ano ko no inochi wa hikouki-gumo</p>
 							</div>
 							<div class="lyrics_r">
-								<b>"Scie di vapore"</b><br><br>
-								La bianca traccia proseguì verso il cielo<br>
-								l'effimero la avvolge, esitando<br>
-								passa inosservata, tutta sola<br>
-								sta salendo al cielo<br>
-								non teme nulla, e si libra in alto nel cielo<br>
-								ammira il cielo, lo attraversa veloce<br>
-								scie di vapore al suo passaggio<br>
-								da quella finestra, anche prima di morire<br>
-								guardava il cielo, e ora non capiscono<br>
-								nessuno capisce<br>
-								credono soltanto che<br>
-								era troppo giovane, ma lei è felice<br>
-								ammira il cielo, lo attraversa veloce<br>
-								scie di vapore al suo passaggio<br><br>
-								ammira il cielo, lo attraversa veloce<br>
-								scie di vapore al suo passaggio
+								<p><b>"Scia d'aeroplano"</b></p>
+								<p>La bianca strada di collina proseguiva fino al cielo;<br>
+								la tremolante caligine avvolge una piccola figura.<br>
+								Senza che nessuno la noti, tutta sola...<br>
+								quella piccola figura va salendo;<br>
+								non ha timore di nulla. E poi vola in alto!</p>
+								<p>Al cielo anelava, il cielo va solcando;<br>
+								la sua giovane vita è... una scia d'aeroplano!</p>
+								<p>A quell'alta finestra, così giovane, già prima di morire<br>
+								se ne stava a guardare il cielo.<br>
+								E adesso, non capiscono!<br>
+								Le altre persone non capiscono!<br>
+								"Era sin troppo giovane"...<br>
+								stanno solo a pensare così. Eppure... felicità!</p>
+								<p>Al cielo anelava, il cielo va solcando;<br>
+								la sua giovane vita è... una scia d'aeroplano!</p>
+								<p>Al cielo anelava, il cielo va solcando;<br>
+								la sua giovane vita è... una scia d'aeroplano!</p>
 							</div>
 						</div>
 						<p>Non posso inoltre sorvolare sui suoni prodotti dagli aerei, realizzati con voci umane, come già accennato per quanto riguarda gli effetti sonori legati al terremoto del Kanto. La voce dei motori, il librarsi nel cielo, il rumore dei meccanismi di accensione sono tutti elementi che soffiano vita nei velivoli, quasi a dargli una coscienza propria. L'ennesima emozione da brividi che ci regala il maestro.</p>
@@ -88,7 +90,7 @@
 								<a href="critica_1">&larr; Pagina precedente</a>
 							</div>
 							<div class="next">
-								<a href="#">Pagina successiva &rarr;</a>
+								<a href="considerazioni">Pagina successiva &rarr;</a>
 							</div>
 						</div>
 					</article>
