--- a/include/articles/miyazaki.html
+++ b/include/articles/miyazaki.html
@@ -15,7 +15,7 @@
 						<p>Vi è inoltre un interessante spunto di riflessione nello stesso manga, uscito nel 2009, che ci fa notare come Miyazaki avesse curiosamente dipinto Jiro e i suoi colleghi progettisti con tratti suini, quasi a condannarne le azioni scellerate.</p>
 						<div class="colonne clearfix">
 							<div class="previous">
-								<a href="#">&larr; Pagina precedente</a>
+								<a href="tema_amoroso_3">&larr; Pagina precedente</a>
 							</div>
 							<div class="next">
 								<a href="miyazaki_1">Pagina successiva &rarr;</a>
