--- a/include/articles/miyazaki_6.html
+++ b/include/articles/miyazaki_6.html
@@ -22,7 +22,7 @@
 								<a href="miyazaki_5">&larr; Pagina precedente</a>
 							</div>
 							<div class="next">
-								<a href="#">Pagina successiva &rarr;</a>
+								<a href="critica">Pagina successiva &rarr;</a>
 							</div>
 						</div>
 					</article>
