--- a/include/articles/tema_amoroso.html
+++ b/include/articles/tema_amoroso.html
@@ -15,7 +15,7 @@
 						<p>I loro destini infatti si intrecciano per la prima volta su un treno, un incontro che ha del poetico e che ha bisogno di essere visto più volte per essere compreso fino in fondo, essendo molto più ricco di dettagli di quanto sia lecito aspettarsi.</p>
 						<div class="colonne clearfix">
 							<div class="previous">
-								<a href="#">&larr; Pagina precedente</a>
+								<a href="tema_politico_1">&larr; Pagina precedente</a>
 							</div>
 							<div class="next">
 								<a href="tema_amoroso_1">Pagina successiva &rarr;</a>
