--- a/include/articles/tema_politico.html
+++ b/include/articles/tema_politico.html
@@ -21,7 +21,7 @@
 						<p class="curiosita"><b>Curiosità:</b> Avendo provato a replicare in casa il Siberia, posso affermare che personalmente l'offerta di Jiro l'avrei accettata senza esitazione!</p>
 						<div class="colonne clearfix">
 							<div class="previous">
-								<a href="#">&larr; Pagina precedente</a>
+								<a href="tema_storico_4">&larr; Pagina precedente</a>
 							</div>
 							<div class="next">
 								<a href="tema_politico_1">Pagina successiva &rarr;</a>
