--- a/include/articles/tema_storico.html
+++ b/include/articles/tema_storico.html
@@ -15,7 +15,7 @@
 						<p>Oltre allo straordinario potere suggestivo delle immagini proposte (elemento comune a tutte le produzioni targate Ghibli), <i>Si Alza il Vento</i> riesce a calare il fruitore all'interno del contesto narrativo attraverso alcune "lezioni di storia" che nella pellicola vengono inserite poco alla volta, perfettamente in linea con il ritmo della narrazione e senza mai risultare forzate, proprio come se l'intenzione fosse quella di far ambientare lo spettatore in una nuova realtà. Un po' come accade quando ci trasferiamo in una nuova città e ci vuole del tempo per ambientarci in una realtà diversa da quella che conoscevamo, con abitudini ma soprattutto ritmi differenti, Miyazaki ci dà il tempo di metabolizzare tutte le informazioni storiche fornite.</p>
 						<div class="colonne clearfix">
 							<div class="previous">
-								<a href="#">&larr; Pagina precedente</a>
+								<a href="introduzione">&larr; Pagina precedente</a>
 							</div>
 							<div class="next">
 								<a href="tema_storico_1">Pagina successiva &rarr;</a>
