--- a/include/articles/tema_storico_4.html
+++ b/include/articles/tema_storico_4.html
@@ -19,7 +19,7 @@
 								<a href="tema_storico_3">&larr; Pagina precedente</a>
 							</div>
 							<div class="next">
-								<a href="#">Pagina successiva &rarr;</a>
+								<a href="tema_politico">Pagina successiva &rarr;</a>
 							</div>
 						</div>
 					</article>
