--- a/include/menu.html
+++ b/include/menu.html
@@ -43,10 +43,14 @@
 									</ul>
 								<li id="menu-considerazioni"><a href="considerazioni">Considerazioni personali</a></li>
 									<ul class="submenu">
-										<li id="menu-caratterizzazione"><a href="caratterizzazione">La caratterizzazione dei personaggi</a></li>
-										<li id="menu-bambini"><a href="ritmo">I bambini e la domanda "Perché?"</a></li>
-										<li id="menu-arte"><a href="arte">L'arte che fa conoscere sè stessi</a></li>
+										<li id="menu-considerazioni1"><a href="considerazioni_1">La caratterizzazione dei personaggi</a></li>
+										<li id="menu-considerazioni2"><a href="considerazioni_2">I bambini e la domanda "Perché?"</a></li>
+										<li id="menu-considerazioni3"><a href="considerazioni_3">L'arte che fa conoscere sè stessi</a></li>
 									</ul>
+								<li id="menu-casttecnico"><a href="cast_tecnico">Cast tecnico dello Studio</a></li>
+								<li id="menu-bluray"><a href="bluray">Edizione Blu-ray</a></li>
+								<li id="menu-soundtrack"><a href="soundtrack">Colonna sonora</a></li>
+								<li id="menu-credits"><a href="credits">Credits</a></li>
 							</ul>
 							<img id="logoghibli" src="../assets/logo_ghibli.png" alt="Studio Ghibli">
 						</nav>
