--- a/include/articles/critica.html
+++ b/include/articles/critica.html
@@ -14,7 +14,7 @@
 						<p>Tuttavia, avendo già spolpato l'argomento delle contraddizioni personali del maestro, che alludevano alla persona di Jiro e alle sue creazioni, è giunto il momento di passare proprio alla critica forse più delicata di tutte quelle che gli sono state rivolte: quella a sfondo storico-politico.</p>
 						<div class="colonne clearfix">
 							<div class="previous">
-								<a href="#">&larr; Pagina precedente</a>
+								<a href="miyazaki_6">&larr; Pagina precedente</a>
 							</div>
 							<div class="next">
 								<a href="critica_1">Pagina successiva &rarr;</a>
