--- a/include/articles/tema_amoroso_3.html
+++ b/include/articles/tema_amoroso_3.html
@@ -54,7 +54,7 @@
 								<a href="tema_amoroso_2">&larr; Pagina precedente</a>
 							</div>
 							<div class="next">
-								<a href="#">Pagina successiva &rarr;</a>
+								<a href="miyazaki">Pagina successiva &rarr;</a>
 							</div>
 						</div>
 					</article>
