--- a/include/articles/tema_politico_1.html
+++ b/include/articles/tema_politico_1.html
@@ -24,7 +24,7 @@
 								<a href="tema_politico">&larr; Pagina precedente</a>
 							</div>
 							<div class="next">
-								<a href="#">Pagina successiva &rarr;</a>
+								<a href="tema_amoroso">Pagina successiva &rarr;</a>
 							</div>
 						</div>
 					</article>
